[package]
name = "fake-actuator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coap-lite = "0.11.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
url = { version = "2.5.0", features = [] }
rand = "0.8.5"
local-ip-address = "0.5.6"
tokio = { version = "1.35.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.29"
log = { version = "0.4.20", features = [] }
tokio-stream = "0.1.14"
regex = "1.10.2"
lru_time_cache = "0.11.11"
futures-util = "0.3.29"
tokio-util = { version = "0.7.10", features = ["full"] }
bytes = "1.5.0"
anyhow = "1.0.75"